parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    CONST_VALOR
    PROGRAMA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> declaracoes bloco
Rule 2     declaracoes -> def_const def_var def_func
Rule 3     def_const -> CONST constante PONTOEVIRGULA list_const
Rule 4     list_const -> constante PONTOEVIRGULA list_const
Rule 5     list_const -> <empty>
Rule 6     constante -> id EQ const_valor
Rule 7     const_valor -> STRING
Rule 8     const_valor -> exp_mat
Rule 9     tipo_dado -> INTEGER
Rule 10    tipo_dado -> REAL
Rule 11    tipo_dado -> STRING
Rule 12    tipo_dado -> ARRAY ABRECOLCHETES numero FECHACOLCHETES OF tipo_dado
Rule 13    tipo_dado -> RECORD campos END
Rule 14    campos -> id DOISPONTOS tipo_dado lista_campos
Rule 15    lista_campos -> PONTOEVIRGULA campos lista_campos
Rule 16    lista_campos -> <empty>
Rule 17    def_var -> VAR variavel PONTOEVIRGULA list_var
Rule 18    def_var -> <empty>
Rule 19    list_var -> variavel PONTOEVIRGULA list_var
Rule 20    list_var -> <empty>
Rule 21    variavel -> id lista_id DOISPONTOS tipo_dado
Rule 22    lista_id -> VIRGULA id lista_id
Rule 23    lista_id -> <empty>
Rule 24    def_func -> funcao def_func
Rule 25    def_func -> <empty>
Rule 26    funcao -> FUNCTION nome_funcao bloco_funcao
Rule 27    nome_funcao -> id param_func DOISPONTOS tipo_dado
Rule 28    param_func -> ABREPARENTESES campos FECHAPARENTESES
Rule 29    param_func -> <empty>
Rule 30    bloco_funcao -> def_var bloco
Rule 31    bloco -> BEGIN comando PONTOEVIRGULA lista_com END
Rule 32    lista_com -> comando PONTOEVIRGULA lista_com
Rule 33    lista_com -> <empty>
Rule 34    comando -> id nome ATRIBUICAO exp_mat
Rule 35    comando -> WHILE exp_logica bloco
Rule 36    comando -> IF exp_logica bloco else
Rule 37    comando -> WRITE parametro
Rule 38    comando -> READ id nome
Rule 39    else -> ELSE bloco
Rule 40    else -> <empty>
Rule 41    lista_param -> parametro VIRGULA lista_param
Rule 42    lista_param -> parametro
Rule 43    lista_param -> <empty>
Rule 44    exp_logica -> exp_comp op_logico exp_logica
Rule 45    exp_logica -> exp_comp
Rule 46    op_logico -> OR
Rule 47    op_logico -> AND
Rule 48    exp_comp -> exp_mat op_comp exp_comp
Rule 49    exp_comp -> exp_mat
Rule 50    op_comp -> GT
Rule 51    op_comp -> LT
Rule 52    op_comp -> EQ
Rule 53    op_comp -> DIF
Rule 54    op_comp -> NEQ
Rule 55    op_comp -> LTE
Rule 56    op_comp -> GTE
Rule 57    exp_mat -> parametro op_mat exp_mat
Rule 58    exp_mat -> parametro
Rule 59    op_mat -> SOMA
Rule 60    op_mat -> SUBTRACAO
Rule 61    op_mat -> MULTIPLICACAO
Rule 62    op_mat -> DIVISAO
Rule 63    parametro -> id nome
Rule 64    parametro -> numero
Rule 65    nome -> PONTO id nome
Rule 66    nome -> ABRECOLCHETES parametro FECHACOLCHETES
Rule 67    nome -> ABREPARENTESES lista_param FECHAPARENTESES
Rule 68    nome -> <empty>
Rule 69    id -> IDENTIFICADOR
Rule 70    numero -> NUMBER

Terminals, with rules where they appear

ABRECOLCHETES        : 12 66
ABREPARENTESES       : 28 67
AND                  : 47
ARRAY                : 12
ATRIBUICAO           : 34
BEGIN                : 31
CHAR                 : 
CONST                : 3
CONST_VALOR          : 
DIF                  : 53
DIVISAO              : 62
DOISPONTOS           : 14 21 27
ELSE                 : 39
END                  : 13 31
EQ                   : 6 52
FECHACOLCHETES       : 12 66
FECHAPARENTESES      : 28 67
FUNCTION             : 26
GT                   : 50
GTE                  : 56
IDENTIFICADOR        : 69
IF                   : 36
INTEGER              : 9
LT                   : 51
LTE                  : 55
MULTIPLICACAO        : 61
NEQ                  : 54
NUMBER               : 70
OF                   : 12
OR                   : 46
PONTO                : 65
PONTOEVIRGULA        : 3 4 15 17 19 31 32
PROGRAMA             : 
READ                 : 38
REAL                 : 10
RECORD               : 13
SOMA                 : 59
STRING               : 7 11
SUBTRACAO            : 60
VAR                  : 17
VIRGULA              : 22 41
WHILE                : 35
WRITE                : 37
error                : 

Nonterminals, with rules where they appear

bloco                : 1 30 35 36 39
bloco_funcao         : 26
campos               : 13 15 28
comando              : 31 32
const_valor          : 6
constante            : 3 4
declaracoes          : 1
def_const            : 2
def_func             : 2 24
def_var              : 2 30
else                 : 36
exp_comp             : 44 45 48
exp_logica           : 35 36 44
exp_mat              : 8 34 48 49 57
funcao               : 24
id                   : 6 14 21 22 27 34 38 63 65
list_const           : 3 4
list_var             : 17 19
lista_campos         : 14 15
lista_com            : 31 32
lista_id             : 21 22
lista_param          : 41 67
nome                 : 34 38 63 65
nome_funcao          : 26
numero               : 12 64
op_comp              : 48
op_logico            : 44
op_mat               : 57
param_func           : 27
parametro            : 37 41 42 57 58 66
programa             : 0
tipo_dado            : 12 14 21 27
variavel             : 17 19

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . declaracoes bloco
    (2) declaracoes -> . def_const def_var def_func
    (3) def_const -> . CONST constante PONTOEVIRGULA list_const

    CONST           shift and go to state 4

    programa                       shift and go to state 1
    declaracoes                    shift and go to state 2
    def_const                      shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> declaracoes . bloco
    (31) bloco -> . BEGIN comando PONTOEVIRGULA lista_com END

    BEGIN           shift and go to state 6

    bloco                          shift and go to state 5

state 3

    (2) declaracoes -> def_const . def_var def_func
    (17) def_var -> . VAR variavel PONTOEVIRGULA list_var
    (18) def_var -> .

    VAR             shift and go to state 8
    FUNCTION        reduce using rule 18 (def_var -> .)
    BEGIN           reduce using rule 18 (def_var -> .)

    def_var                        shift and go to state 7

state 4

    (3) def_const -> CONST . constante PONTOEVIRGULA list_const
    (6) constante -> . id EQ const_valor
    (69) id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    constante                      shift and go to state 9
    id                             shift and go to state 10

state 5

    (1) programa -> declaracoes bloco .

    $end            reduce using rule 1 (programa -> declaracoes bloco .)


state 6

    (31) bloco -> BEGIN . comando PONTOEVIRGULA lista_com END
    (34) comando -> . id nome ATRIBUICAO exp_mat
    (35) comando -> . WHILE exp_logica bloco
    (36) comando -> . IF exp_logica bloco else
    (37) comando -> . WRITE parametro
    (38) comando -> . READ id nome
    (69) id -> . IDENTIFICADOR

    WHILE           shift and go to state 14
    IF              shift and go to state 15
    WRITE           shift and go to state 16
    READ            shift and go to state 17
    IDENTIFICADOR   shift and go to state 11

    comando                        shift and go to state 12
    id                             shift and go to state 13

state 7

    (2) declaracoes -> def_const def_var . def_func
    (24) def_func -> . funcao def_func
    (25) def_func -> .
    (26) funcao -> . FUNCTION nome_funcao bloco_funcao

    BEGIN           reduce using rule 25 (def_func -> .)
    FUNCTION        shift and go to state 20

    def_func                       shift and go to state 18
    funcao                         shift and go to state 19

state 8

    (17) def_var -> VAR . variavel PONTOEVIRGULA list_var
    (21) variavel -> . id lista_id DOISPONTOS tipo_dado
    (69) id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    variavel                       shift and go to state 21
    id                             shift and go to state 22

state 9

    (3) def_const -> CONST constante . PONTOEVIRGULA list_const

    PONTOEVIRGULA   shift and go to state 23


state 10

    (6) constante -> id . EQ const_valor

    EQ              shift and go to state 24


state 11

    (69) id -> IDENTIFICADOR .

    EQ              reduce using rule 69 (id -> IDENTIFICADOR .)
    PONTO           reduce using rule 69 (id -> IDENTIFICADOR .)
    ABRECOLCHETES   reduce using rule 69 (id -> IDENTIFICADOR .)
    ABREPARENTESES  reduce using rule 69 (id -> IDENTIFICADOR .)
    ATRIBUICAO      reduce using rule 69 (id -> IDENTIFICADOR .)
    VIRGULA         reduce using rule 69 (id -> IDENTIFICADOR .)
    DOISPONTOS      reduce using rule 69 (id -> IDENTIFICADOR .)
    SOMA            reduce using rule 69 (id -> IDENTIFICADOR .)
    SUBTRACAO       reduce using rule 69 (id -> IDENTIFICADOR .)
    MULTIPLICACAO   reduce using rule 69 (id -> IDENTIFICADOR .)
    DIVISAO         reduce using rule 69 (id -> IDENTIFICADOR .)
    GT              reduce using rule 69 (id -> IDENTIFICADOR .)
    LT              reduce using rule 69 (id -> IDENTIFICADOR .)
    DIF             reduce using rule 69 (id -> IDENTIFICADOR .)
    NEQ             reduce using rule 69 (id -> IDENTIFICADOR .)
    LTE             reduce using rule 69 (id -> IDENTIFICADOR .)
    GTE             reduce using rule 69 (id -> IDENTIFICADOR .)
    OR              reduce using rule 69 (id -> IDENTIFICADOR .)
    AND             reduce using rule 69 (id -> IDENTIFICADOR .)
    BEGIN           reduce using rule 69 (id -> IDENTIFICADOR .)
    PONTOEVIRGULA   reduce using rule 69 (id -> IDENTIFICADOR .)
    FECHACOLCHETES  reduce using rule 69 (id -> IDENTIFICADOR .)
    FECHAPARENTESES reduce using rule 69 (id -> IDENTIFICADOR .)


state 12

    (31) bloco -> BEGIN comando . PONTOEVIRGULA lista_com END

    PONTOEVIRGULA   shift and go to state 25


state 13

    (34) comando -> id . nome ATRIBUICAO exp_mat
    (65) nome -> . PONTO id nome
    (66) nome -> . ABRECOLCHETES parametro FECHACOLCHETES
    (67) nome -> . ABREPARENTESES lista_param FECHAPARENTESES
    (68) nome -> .

    PONTO           shift and go to state 27
    ABRECOLCHETES   shift and go to state 28
    ABREPARENTESES  shift and go to state 29
    ATRIBUICAO      reduce using rule 68 (nome -> .)

    nome                           shift and go to state 26

state 14

    (35) comando -> WHILE . exp_logica bloco
    (44) exp_logica -> . exp_comp op_logico exp_logica
    (45) exp_logica -> . exp_comp
    (48) exp_comp -> . exp_mat op_comp exp_comp
    (49) exp_comp -> . exp_mat
    (57) exp_mat -> . parametro op_mat exp_mat
    (58) exp_mat -> . parametro
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    exp_logica                     shift and go to state 30
    exp_comp                       shift and go to state 31
    exp_mat                        shift and go to state 32
    parametro                      shift and go to state 33
    id                             shift and go to state 34
    numero                         shift and go to state 35

state 15

    (36) comando -> IF . exp_logica bloco else
    (44) exp_logica -> . exp_comp op_logico exp_logica
    (45) exp_logica -> . exp_comp
    (48) exp_comp -> . exp_mat op_comp exp_comp
    (49) exp_comp -> . exp_mat
    (57) exp_mat -> . parametro op_mat exp_mat
    (58) exp_mat -> . parametro
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    exp_logica                     shift and go to state 37
    exp_comp                       shift and go to state 31
    exp_mat                        shift and go to state 32
    parametro                      shift and go to state 33
    id                             shift and go to state 34
    numero                         shift and go to state 35

state 16

    (37) comando -> WRITE . parametro
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    parametro                      shift and go to state 38
    id                             shift and go to state 34
    numero                         shift and go to state 35

state 17

    (38) comando -> READ . id nome
    (69) id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    id                             shift and go to state 39

state 18

    (2) declaracoes -> def_const def_var def_func .

    BEGIN           reduce using rule 2 (declaracoes -> def_const def_var def_func .)


state 19

    (24) def_func -> funcao . def_func
    (24) def_func -> . funcao def_func
    (25) def_func -> .
    (26) funcao -> . FUNCTION nome_funcao bloco_funcao

    BEGIN           reduce using rule 25 (def_func -> .)
    FUNCTION        shift and go to state 20

    funcao                         shift and go to state 19
    def_func                       shift and go to state 40

state 20

    (26) funcao -> FUNCTION . nome_funcao bloco_funcao
    (27) nome_funcao -> . id param_func DOISPONTOS tipo_dado
    (69) id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    nome_funcao                    shift and go to state 41
    id                             shift and go to state 42

state 21

    (17) def_var -> VAR variavel . PONTOEVIRGULA list_var

    PONTOEVIRGULA   shift and go to state 43


state 22

    (21) variavel -> id . lista_id DOISPONTOS tipo_dado
    (22) lista_id -> . VIRGULA id lista_id
    (23) lista_id -> .

    VIRGULA         shift and go to state 45
    DOISPONTOS      reduce using rule 23 (lista_id -> .)

    lista_id                       shift and go to state 44

state 23

    (3) def_const -> CONST constante PONTOEVIRGULA . list_const
    (4) list_const -> . constante PONTOEVIRGULA list_const
    (5) list_const -> .
    (6) constante -> . id EQ const_valor
    (69) id -> . IDENTIFICADOR

    VAR             reduce using rule 5 (list_const -> .)
    FUNCTION        reduce using rule 5 (list_const -> .)
    BEGIN           reduce using rule 5 (list_const -> .)
    IDENTIFICADOR   shift and go to state 11

    constante                      shift and go to state 46
    list_const                     shift and go to state 47
    id                             shift and go to state 10

state 24

    (6) constante -> id EQ . const_valor
    (7) const_valor -> . STRING
    (8) const_valor -> . exp_mat
    (57) exp_mat -> . parametro op_mat exp_mat
    (58) exp_mat -> . parametro
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    STRING          shift and go to state 49
    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    id                             shift and go to state 34
    const_valor                    shift and go to state 48
    exp_mat                        shift and go to state 50
    parametro                      shift and go to state 33
    numero                         shift and go to state 35

state 25

    (31) bloco -> BEGIN comando PONTOEVIRGULA . lista_com END
    (32) lista_com -> . comando PONTOEVIRGULA lista_com
    (33) lista_com -> .
    (34) comando -> . id nome ATRIBUICAO exp_mat
    (35) comando -> . WHILE exp_logica bloco
    (36) comando -> . IF exp_logica bloco else
    (37) comando -> . WRITE parametro
    (38) comando -> . READ id nome
    (69) id -> . IDENTIFICADOR

    END             reduce using rule 33 (lista_com -> .)
    WHILE           shift and go to state 14
    IF              shift and go to state 15
    WRITE           shift and go to state 16
    READ            shift and go to state 17
    IDENTIFICADOR   shift and go to state 11

    comando                        shift and go to state 51
    lista_com                      shift and go to state 52
    id                             shift and go to state 13

state 26

    (34) comando -> id nome . ATRIBUICAO exp_mat

    ATRIBUICAO      shift and go to state 53


state 27

    (65) nome -> PONTO . id nome
    (69) id -> . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 11

    id                             shift and go to state 54

state 28

    (66) nome -> ABRECOLCHETES . parametro FECHACOLCHETES
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    parametro                      shift and go to state 55
    id                             shift and go to state 34
    numero                         shift and go to state 35

state 29

    (67) nome -> ABREPARENTESES . lista_param FECHAPARENTESES
    (41) lista_param -> . parametro VIRGULA lista_param
    (42) lista_param -> . parametro
    (43) lista_param -> .
    (63) parametro -> . id nome
    (64) parametro -> . numero
    (69) id -> . IDENTIFICADOR
    (70) numero -> . NUMBER

    FECHAPARENTESES reduce using rule 43 (lista_param -> .)
    IDENTIFICADOR   shift and go to state 11
    NUMBER          shift and go to state 36

    lista_param                    shift and go to state 56
    parametro                      shift and go to state 57
    id                             shift and go to state 34
    numero                         shift and go to state 35

state 30

    (35) comando -> WHILE exp_logica . bloco
    (31) bloco -> . BEGIN comando PONTOEVIRGULA lista_com END

    BEGIN           shift and go to state 6

    bloco                          shift and go to state 58

state 31

    (44) exp_logica -> exp_comp . op_logico exp_logica
    (45) exp_logica -> exp_comp .
    (46) op_logico -> . OR
    (47) op_logico -> . AND

    BEGIN           reduce using rule 45 (exp_logica -> exp_comp .)
    OR              shift and go to state 60
    AND             shift and go to state 61

    op_logico                      shift and go to state 59

state 32

    (48) exp_comp -> exp_mat . op_comp exp_comp
    (49) exp_comp -> exp_mat .
    (50) op_comp -> . GT
    (51) op_comp -> . LT
    (52) op_comp -> . EQ
    (53) op_comp -> . DIF
    (54) op_comp -> . NEQ
    (55) op_comp -> . LTE
    (56) op_comp -> . GTE

    OR              reduce using rule 49 (exp_comp -> exp_mat .)
    AND             reduce using rule 49 (exp_comp -> exp_mat .)
    BEGIN           reduce using rule 49 (exp_comp -> exp_mat .)
    GT              shift and go to state 63
    LT              shift and go to state 64
    EQ              shift and go to state 65
    DIF             shift and go to state 66
    NEQ             shift and go to state 67
    LTE             shift and go to state 68
    GTE             shift and go to state 69

    op_comp                        shift and go to state 62

state 33

    (57) exp_mat -> parametro . op_mat exp_mat
    (58) exp_mat -> parametro .
    (59) op_mat -> . SOMA
    (60) op_mat -> . SUBTRACAO
    (61) op_mat -> . MULTIPLICACAO
    (62) op_mat -> . DIVISAO

    GT              reduce using rule 58 (exp_mat -> parametro .)
    LT              reduce using rule 58 (exp_mat -> parametro .)
    EQ              reduce using rule 58 (exp_mat -> parametro .)
    DIF             reduce using rule 58 (exp_mat -> parametro .)
    NEQ             reduce using rule 58 (exp_mat -> parametro .)
    LTE             reduce using rule 58 (exp_mat -> parametro .)
    GTE             reduce using rule 58 (exp_mat -> parametro .)
    OR              reduce using rule 58 (exp_mat -> parametro .)
    AND             reduce using rule 58 (exp_mat -> parametro .)
    BEGIN           reduce using rule 58 (exp_mat -> parametro .)
    PONTOEVIRGULA   reduce using rule 58 (exp_mat -> parametro .)
    SOMA            shift and go to state 71
    SUBTRACAO       shift and go to state 72
    MULTIPLICACAO   shift and go to state 73
    DIVISAO         shift and go to state 74

    op_mat                         shift and go to state 70

state 34

    (63) parametro -> id . nome
    (65) nome -> . PONTO id nome
    (66) nome -> . ABRECOLCHETES parametro FECHACOLCHETES
    (67) nome -> . ABREPARENTESES lista_param FECHAPARENTESES
    (68) nome -> .

    PONTO           shift and go to state 27
    ABRECOLCHETES   shift and go to state 28
    ABREPARENTESES  shift and go to state 29
    SOMA            reduce using rule 68 (nome -> .)
    SUBTRACAO       reduce using rule 68 (nome -> .)
    MULTIPLICACAO   reduce using rule 68 (nome -> .)
    DIVISAO         reduce using rule 68 (nome -> .)
    GT              reduce using rule 68 (nome -> .)
    LT              reduce using rule 68 (nome -> .)
    EQ              reduce using rule 68 (nome -> .)
    DIF             reduce using rule 68 (nome -> .)
    NEQ             reduce using rule 68 (nome -> .)
    LTE             reduce using rule 68 (nome -> .)
    GTE             reduce using rule 68 (nome -> .)
    OR              reduce using rule 68 (nome -> .)
    AND             reduce using rule 68 (nome -> .)
    BEGIN           reduce using rule 68 (nome -> .)
    PONTOEVIRGULA   reduce using rule 68 (nome -> .)
    FECHACOLCHETES  reduce using rule 68 (nome -> .)
    VIRGULA         reduce using rule 68 (nome -> .)
    FECHAPARENTESES reduce using rule 68 (nome -> .)

    nome                           shift and go to state 75

state 35

    (64) parametro -> numero .

    SOMA            reduce using rule 64 (parametro -> numero .)
    SUBTRACAO       reduce using rule 64 (parametro -> numero .)
    MULTIPLICACAO   reduce using rule 64 (parametro -> numero .)
    DIVISAO         reduce using rule 64 (parametro -> numero .)
    GT              reduce using rule 64 (parametro -> numero .)
    LT              reduce using rule 64 (parametro -> numero .)
    EQ              reduce using rule 64 (parametro -> numero .)
    DIF             reduce using rule 64 (parametro -> numero .)
    NEQ             reduce using rule 64 (parametro -> numero .)
    LTE             reduce using rule 64 (parametro -> numero .)
    GTE             reduce using rule 64 (parametro -> numero .)
    OR              reduce using rule 64 (parametro -> numero .)
    AND             reduce using rule 64 (parametro -> numero .)
    BEGIN           reduce using rule 64 (parametro -> numero .)
    PONTOEVIRGULA   reduce using rule 64 (parametro -> numero .)
    FECHACOLCHETES  reduce using rule 64 (parametro -> numero .)
    VIRGULA         reduce using rule 64 (parametro -> numero .)
    FECHAPARENTESES reduce using rule 64 (parametro -> numero .)


state 36

    (70) numero -> NUMBER .

    SOMA            reduce using rule 70 (numero -> NUMBER .)
    SUBTRACAO       reduce using rule 70 (numero -> NUMBER .)
    MULTIPLICACAO   reduce using rule 70 (numero -> NUMBER .)
    DIVISAO         reduce using rule 70 (numero -> NUMBER .)
    GT              reduce using rule 70 (numero -> NUMBER .)
    LT              reduce using rule 70 (numero -> NUMBER .)
    EQ              reduce using rule 70 (numero -> NUMBER .)
    DIF             reduce using rule 70 (numero -> NUMBER .)
    NEQ             reduce using rule 70 (numero -> NUMBER .)
    LTE             reduce using rule 70 (numero -> NUMBER .)
    GTE             reduce using rule 70 (numero -> NUMBER .)
    OR              reduce using rule 70 (numero -> NUMBER .)
    AND             reduce using rule 70 (numero -> NUMBER .)
    BEGIN           reduce using rule 70 (numero -> NUMBER .)
    PONTOEVIRGULA   reduce using rule 70 (numero -> NUMBER .)
    FECHACOLCHETES  reduce using rule 70 (numero -> NUMBER .)
    VIRGULA         reduce using rule 70 (numero -> NUMBER .)
    FECHAPARENTESES reduce using rule 70 (numero -> NUMBER .)


state 37

    (36) comando -> IF exp_logica . bloco else
    (31) bloco -> . BEGIN comando PONTOEVIRGULA lista_com END

    BEGIN           shift and go to state 6

    bloco                          shift and go to state 76

state 38

    (37) comando -> WRITE parametro .

    PONTOEVIRGULA   reduce using rule 37 (comando -> WRITE parametro .)


state 39

    (38) comando -> READ id . nome
    (65) nome -> . PONTO id nome
    (66) nome -> . ABRECOLCHETES parametro FECHACOLCHETES
    (67) nome -> . ABREPARENTESES lista_param FECHAPARENTESES
    (68) nome -> .

    PONTO           shift and go to state 27
    ABRECOLCHETES   shift and go to state 28
    ABREPARENTESES  shift and go to state 29
    PONTOEVIRGULA   reduce using rule 68 (nome -> .)

    nome                           shift and go to state 77

state 40

    (24) def_func -> funcao def_func .

    BEGIN           reduce using rule 24 (def_func -> funcao def_func .)


state 41

    (26) funcao -> FUNCTION nome_funcao . bloco_funcao
    (30) bloco_funcao -> . def_var bloco
    (17) def_var -> . VAR variavel PONTOEVIRGULA list_var
    (18) def_var -> .

    VAR             shift and go to state 8
    BEGIN           reduce using rule 18 (def_var -> .)

    bloco_funcao                   shift and go to state 78
    def_var                        shift and go to state 79

state 42

    (27) nome_funcao -> id . param_func DOISPONTOS tipo_dado
    (28) param_func -> . ABREPARENTESES campos FECHAPARENTESES
    (29) param_func -> .
